--- a/style.css
+++ b/style.css
@@ -1,10 +1,36 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Goblin+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Goblin+One&family=Roboto&display=swap');
+
 
 header{
-	background:#A2A2A2;
+	background:#868484;
+	background-image: url('images2/texture-background.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+	/* background:#868484; */
 }
 
 h1{
+	font-family: 'Goblin One', cursive;
+	color: aquamarine;
+	padding-top: 4%;
+	padding-bottom: 1%;
+
+}
+
+p{
+	font-family: 'Roboto', sans-serif;
+}
+
+h2{
 	font-family: 'Merriweather', serif;
+}
+
+.id2{
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	width: 150px;
 }
